# orc-rs

./: .gitignore  README.md
.github/workflows/: push.yml  rust.yml
orc-rs/: Cargo.toml  build.rs
orc-rs/src/: common.rs  data_type.rs  datatype.rs  error.rs  lib.rs  orcfile.rs
